# frame_os

./: .gitignore  Cargo.toml  LICENSE  README.md  RunQEMU.sh  build.bat  run.bat
.cargo/: config.toml
abi/: Cargo.toml
assembly/bootloader/mbr/: part1.asm  part2.asm
assembly/bootloader/mbr/includes/: LongModeDirectly.asm
assembly_linker/: Cargo.toml
assembly_linker/src/: main.rs
bootloader_creator/: Cargo.toml
bootloader_creator/src/: main.rs
frame_kernel/: Cargo.toml
frame_kernel/.cargo/: config.toml
frame_kernel/src/: allocator.rs  command.rs  interrupts.rs  kcommand.rs  lib.rs  logger.rs  logo_print.rs  main.rs  ram_file.rs  syscall.rs  syscalls.rs  system.rs  vga_buffer.rs  vga_buffer_outdated.rs  vga_textmode.rs  write_channel.rs  ye_olde_vga_buffer.rs
frame_kernel/src/allocator/: bump.rs  linked_list.rs
frame_kernel/src/command/: memcmd.rs
frame_kernel/src/syscalls/: reg.rs
frame_kernel/src/task/: keyboard.rs
frame_os/: Cargo.toml
simple_fs/: Cargo.toml
simple_fs/src/: lib.rs
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
src/task/: executor.rs  mod.rs
