[workspace]
members = [
    "bootloader_creator",
	"abi",
    #"frame_kernel",
	"frame_os",
	"simple_fs",
]
exclude = [
"frame_kernel", #cannot include until bootload is either fixed to support workspaces, or bootloader_creator crate finishes
]

[profile.release]
opt-level = 3
overflow-checks = false
debug = false
lto = true
debug-assertions = false
incremental = false
codegen-units = 1