[package]
name = "frame_kernel"
version = "2020.1.0"
authors = ["Eric Shreve <ericshreve02@gmail.com>", "Robert Taliancich devmoocow9m@gmail.com"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
overflow-checks = false
debug = false
lto = true
debug-assertions = false
incremental = false
codegen-units = 1

[dependencies]
rlibc = "1.0.0"
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.11.1"
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300 # in seconds

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
